tools/node-depman/tests/snapshots/versions_test__node_depman_tool__unpin_version__removes_if_matching.snap
---
source: tools/node-depman/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {}
}
